--- a/Angular2/Cinema/src/app/home/components/movies/movies.component.html
+++ b/Angular2/Cinema/src/app/home/components/movies/movies.component.html
@@ -1,4 +1,4 @@
-<!-- <h4 class="hh">Зараз у кіно:</h4> -->
+<h4 class="hh">Зараз у кіно:</h4>
 <div class="movie-grid">
     <div *ngFor="let movie of movies" class="movie-card">
         <div class="movie-image">
