--- a/Angular2/Cinema/src/app/home/components/footer/footer.component.html
+++ b/Angular2/Cinema/src/app/home/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer bg-black">
     <div class="container">
         <div class="brand m-3">
-            <a href="#home" class="text-white text-decoration-none">
+            <a routerLink="home" class="text-white text-decoration-none">
                 <h1>IMAGIX</h1> 
                 <h3>CINEMA</h3>
             </a>
@@ -16,25 +16,25 @@
         </div>
         
         <div class="contacts">
-            <a href="#contacts">
+            <a href="contacts">
             <button class="button-85 m-3" role="#contacts">Контакти</button>
             </a>
         </div>
        
         <div class="icons">
             <div class="facebook-box">
-                <a href="#"><i class="fa fa-facebook-f"></i></a>
+                <a href="#cz"><i class="fa fa-facebook-f"></i></a>
             </div>
-            <div class="cart-icon">
-                <a href="instagram">
-                    <a href="#"><i class="fa fa-instagram"></i></a>
+            <div class="instagram">
+                <a href="#df">
+                    <i class="fa fa-instagram"></i>
                 </a>
             </div>
             <div class="telegram">
-                <a href="#"><i class="fa fa-telegram"></i></a>
+                <a href="#а"><i class="fa fa-telegram"></i></a>
             </div>
             <div class="youtube">
-                <a href="#"><i class="fa fa-youtube"></i></a>
+                <a href="#а"><i class="fa fa-youtube"></i></a>
             </div>
         </div>
     </div>
