--- a/Angular2/Cinema/src/app/home/components/movies/movies.component.scss
+++ b/Angular2/Cinema/src/app/home/components/movies/movies.component.scss
@@ -109,42 +109,4 @@ $shadow: rgba(0, 0, 0, 0.1);
             }
         }
     }
-}// /* Картка фільму */
-// .movie-item {
-//     background-color: #1c1c1c;
-//     border-radius: 10px;
-//     overflow: hidden;
-//     text-align: center;
-//     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
-//     transition: transform 0.3s ease, box-shadow 0.3s ease;
-//     cursor: pointer;
-// }
-
-// .movie-item:hover {
-//     transform: translateY(-10px);
-//     box-shadow: 0 15px 40px rgba(0, 0, 0, 0.7);
-// }
-
-// .movie-poster {
-//     width: 100%;
-//     height: 350px;
-//     object-fit: cover;
-//     transition: transform 0.3s ease;
-//     border-bottom: 5px solid #ffcc00;
-// }
-
-// .movie-item:hover .movie-poster {
-//     transform: scale(1.05);
-// }
-
-// h3 {
-//     font-size: 1.4rem;
-//     margin-top: 15px;
-//     color: #ffcc00;
-// }
-
-// p {
-//     font-size: 1rem;
-//     color: #bbb;
-//     margin: 5px 0;
-// }
+}
