--- a/Angular2/Cinema/src/app/not-found/not-found.component.html
+++ b/Angular2/Cinema/src/app/not-found/not-found.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center justify-content-center nf-container">
     <div>
         <p class="h3">Error 404</p>
-        <p class="h4">Lost?</p>
-        <p class="h5">There is no place like <a href="/home">home</a></p> 
+        <p class="h4">Page Not Found</p>
+        <p class="h5">Return to:<a routerLink="/home"> Головна</a></p> 
     </div>
 </div>
