--- a/Angular2/Cinema/src/app/movie-details/movie-details.component.html
+++ b/Angular2/Cinema/src/app/movie-details/movie-details.component.html
@@ -21,8 +21,8 @@
     <h2>Розклад сеансів</h2>
     <!-- <div *ngIf="sessions.length > 0; else noSessions">
       <div class="session-list">
-        <a *ngFor="let session of sessions" [routerLink]="'/buy-ticket/' + session.id" class="session-time">
-          {{ session.time }} - {{ session.format }}
+        <a *ngFor="let session of sessions" [routerLink]="'/buy-ticket/' + session.SessionID" class="session-time">
+          {{ session.Time }} 
         </a>
       </div>
     </div> -->
